--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
+    "escape-html": "^1.0.3",
     "express": "^4.16.4",
     "express-es6-template-engine": "^2.1.7",
     "express-session": "^1.15.6",
