--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "session-file-store": "^1.2.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^6.1.2",
     "nodemon": "^1.18.11"
   },
