--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
     "escape-html": "^1.0.3",
     "express": "^4.16.4",
     "express-es6-template-engine": "^2.1.7",
     "express-session": "^1.15.6",
+    "nexmo": "^2.4.1",
     "pg-promise": "^8.6.4",
-    "session-file-store": "^1.2.0"
+    "session-file-store": "^1.2.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
